# MathPrack-S26S

./: .gitignore  README.md
01_meshes/reference/cpp/: CMakeLists.txt
01_meshes/reference/python/: t13.msh  t3.msh
01_meshes/solutions/stage-0/: circle.py  cube.geo_unrolled  cube.msh  cube.py  cylinder.geo_unrolled.xao
01_meshes/solutions/stage-2/: sword.py  sword.stl
02_vtk/solution/: CMakeLists.txt  README.md  mesh.hpp  sim.cpp
03_fenics/solution/: heat.py
labs/01_meshes/solutions/stage-0/: circle2d.msh  cylinder.geo_unrolled  cylinder.msh  cylinder.py
labs/01_meshes/solutions/stage-1/: torus.geo_unrolled  torus.geo_unrolled.xao  torus.py
labs/01_meshes/solutions/stage-2/: sword.msh
labs/02_vtk/cpp/: CMakeLists.txt
labs/02_vtk/solution/: gen_mesh.cpp  node.hpp
macro_project/src/: elastic_waves.py  main.cpp  postprocess_von_mises.py  thermal_stress_from_vtu.py
macro_project/src/core/: materials.hpp
macro_project/src/export/: probe_writer.hpp  vtk_writer.cpp  vtk_writer.hpp
macro_project/src/scenes/: laser_pulse.hpp  scene.hpp
mini_project/: requirements.txt
mini_project/src/: acoustic_const.py  acoustic_impuls.py  acoustic_impulse.py  basic_waves.py  convert_to_vtu_with_materials.py  elastic_impulse.py
mini_project/src/tools/: convert_to_dxmf.py  convert_to_vtu_with_materials.py  get_materials.py  preprocess.py  quick_check.py
report/: Makefile  main.tex
report/img/: README.txt
report/sections/: bibliography.tex  lab1.tex  lab2.tex  lab3.tex  macroproject.tex  microproject.tex  microproject2.tex  preamble.tex  titlepage.tex
